--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Dashboard</title>
-    <
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container mt-5">
+    <div class="container-fluid mt-5">
       <!-- Main title -->
       <h1 class="mb-4 text-center">Weather Dashboard</h1>
 
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 pl-0">
           <!-- Search bar -->
           <form id="city-form" class="mb-3">
             <input
@@ -36,7 +36,7 @@
         <div class="col-md-8">
           <!-- Current weather -->
           <div id="current-weather" class="border p-3 mb-3">
-            <h2>Current Weather</h2>
+            <h2 class="text-center">Current Weather</h2>
             <!-- Current weather content goes here -->
           </div>
           <!-- Forecast -->
