building the README

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="col-md-4 pl-4">
           <!-- Search bar -->
           <form id="city-form" class="mb-3">
+            <p class="text-muded mb-1">Search for a city</p>
             <input
               type="text"
               id="city-input"
